# OpenMesh-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
docs/: economics.md  ops.md  (+5 more)
pool-coordinator/: alembic.ini  pyproject.toml
pool-coordinator/alembic/: env.py
pool-coordinator/alembic/versions/: 0001_initial_schema.py  0002_add_user_password_hash.py  0003_update_user_role_enum_for_new_auth_flow.py  0004_add_api_key_prefix.py  0005_worker_identity_and_assignment_nonce.py  0006_add_assigned_assignment_status.py  0007_verification_and_audit_controls.py  0008_token_accounting_columns.py  0009_worker_heartbeat_history.py  0010_add_peers_table_for_p2p_federation.py
pool-coordinator/app/: main.py
pool-coordinator/app/api/: admin.py  auth.py  jobs.py  me.py  p2p.py  workers.py
pool-coordinator/app/api/dependencies/: auth.py
pool-coordinator/app/core/: config.py  logging.py  observability.py  protocol_crypto.py  rate_limit.py  security.py
pool-coordinator/app/db/: seeds.py  session.py
pool-coordinator/app/db/models/: __init__.py  accounting.py  auth.py  enums.py  jobs.py  p2p.py  pool.py  workers.py
pool-coordinator/app/schemas/: admin.py  auth.py  jobs.py  me.py  p2p.py  workers.py
pool-coordinator/app/services/: __init__.py  api_keys.py  emission.py  finance.py  job_dispatcher.py  scheduler.py  verification.py
pool-coordinator/tests/: conftest.py  test_api_keys.py  test_api_keys_service.py  test_auth.py  test_finance.py  test_health.py  test_job_dispatch_admin_api.py  test_p2p_api.py  test_protocol_crypto.py  test_rbac.py  test_seeds.py  test_workers_jobs_api.py
pool-coordinator/tests/integration/: conftest.py  test_basic_relations.py  test_migrations_apply.py  test_seed_bootstrap.py
pool-gateway/: pyproject.toml
pool-gateway/app/: main.py
pool-gateway/tests/: test_gateway_api.py  test_health.py
worker/: Cargo.toml
worker/engine_py/: engine.py
worker/src/: main.rs
worker/tests/: cli.rs
(+2 files in other folders)
